--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -16,7 +16,7 @@
 // You can also add your own custom variables to this file for
 // use in your site stylesheets.
 
-@import "bootswatch/variables.less";
+@import "bootstrap/variables.less";
 
 
 // Site Styles
