dashboard view for domains and campaigns

--- a/templates/views/contact.jade
+++ b/templates/views/contact.jade
@@ -13,7 +13,7 @@ block content
 				if enquirySubmitted
 					p.lead.text-success We will contact you very soon.
 				else
-					p.lead Please consider that EVER member of the collective has to agree on new members participation. Your application will be emailed to each one and or is called by phone to confirm. 
+					p.lead Please consider that EVERY member of the collective has to agree on new members participation. Your application will be emailed to each one and or is called by phone to confirm. 
 					| This happens in the interest of keeping things save around here and benefitial to all.
 					form(method='post')
 						input(type='hidden', name='action', value='contact')
