--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -12,7 +12,7 @@ block content
 				.alert.alert-success 
 					h4 Heads Up!
 					p You are already signed in as administrator. 
-						a(href='/keystone') Open Dashboard
+						a(href='/dashboard') Open Dashboard
 			else 
 				p All applicants have to be approved by all existing members of the platform. <br> You can find the <a href='/contact'>Application Form</a> here.
 			hr
